unpackaged/main/default/objects/npsp__Rollup__mdt/npsp__Rollup__mdt.object-meta.xml
<CustomObject>
    <description>NPSP Customizable Rollup definitions</description>
    <label>Rollup</label>
    <pluralLabel>Rollups</pluralLabel>
</CustomObject>