unpackaged/main/default/objects/npsp__Rollup__mdt/fields/npsp__Active__c.field-meta.xml
<CustomField>
    <fullName>npsp__Active__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>