unpackaged/main/default/objects/npsp__Rollup__mdt/fields/npsp__Amount_Field__c.field-meta.xml
<CustomField>
    <fullName>npsp__Amount_Field__c</fullName>
    <label>Amount Field</label>
    <metadataRelationshipControllingField>npsp__Rollup__mdt.npsp__Amount_Object__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>RollupsAmount</relationshipLabel>
    <relationshipName>RollupsAmount</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>