unpackaged/main/default/objects/npsp__Rollup__mdt/fields/npsp__Amount_Object__c.field-meta.xml
<CustomField>
    <fullName>npsp__Amount_Object__c</fullName>
    <label>Amount Object</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>RollupAmount</relationshipLabel>
    <relationshipName>RollupAmount</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>