unpackaged/main/default/objects/npsp__Rollup__mdt/fields/npsp__Date_Field__c.field-meta.xml
<CustomField>
    <fullName>npsp__Date_Field__c</fullName>
    <label>Date Field</label>
    <metadataRelationshipControllingField>npsp__Rollup__mdt.npsp__Date_Object__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>RollupsDate</relationshipLabel>
    <relationshipName>RollupsDate</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>