unpackaged/main/default/objects/npsp__Rollup__mdt/fields/npsp__Description__c.field-meta.xml
<CustomField>
    <fullName>npsp__Description__c</fullName>
    <label>Description</label>
    <length>1020</length>
    <type>LongTextArea</type>
</CustomField>