unpackaged/main/default/objects/npsp__Rollup__mdt/fields/npsp__Detail_Field__c.field-meta.xml
<CustomField>
    <fullName>npsp__Detail_Field__c</fullName>
    <label>Field to Roll Up</label>
    <metadataRelationshipControllingField>npsp__Rollup__mdt.npsp__Detail_Object__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>RollupsDetail</relationshipLabel>
    <relationshipName>RollupsDetail</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>