unpackaged/main/default/objects/npsp__Rollup__mdt/fields/npsp__Detail_Object__c.field-meta.xml
<CustomField>
    <fullName>npsp__Detail_Object__c</fullName>
    <label>Detail Object</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>RollupsDetail</relationshipLabel>
    <relationshipName>RollupsDetail</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>