unpackaged/main/default/objects/npsp__Rollup__mdt/fields/npsp__Filter_Group__c.field-meta.xml
<CustomField>
    <fullName>npsp__Filter_Group__c</fullName>
    <label>Filter Group</label>
    <referenceTo>npsp__Filter_Group__mdt</referenceTo>
    <relationshipLabel>Rollups</relationshipLabel>
    <relationshipName>Rollups</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>