unpackaged/main/default/objects/npsp__Rollup__mdt/fields/npsp__Is_Deleted__c.field-meta.xml
<CustomField>
    <fullName>npsp__Is_Deleted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsDeleted</label>
    <type>Checkbox</type>
</CustomField>