unpackaged/main/default/objects/npsp__Rollup__mdt/listViews/All_with_Status.listView-meta.xml
<ListView>
    <fullName>All_with_Status</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>npsp__Active__c</columns>
    <columns>NamespacePrefix</columns>
    <columns>npsp__Filter_Group__c</columns>
    <columns>npsp__Summary_Field__c</columns>
    <columns>npsp__Detail_Field__c</columns>
    <columns>npsp__Detail_Object__c</columns>
    <filterScope>Everything</filterScope>
    <label>All with Status</label>
    <language>en_US</language>
</ListView>